--- a/src/app/(features)/home/home.module.scss
+++ b/src/app/(features)/home/home.module.scss
@@ -26,4 +26,15 @@
   .cardContainer > :not(:last-child) {
     margin-right: 10px; /* Adjust as needed */
   }
+
+  .loaderContainer {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
